--- a/src/app/perfil/perfil/perfil.component.css
+++ b/src/app/perfil/perfil/perfil.component.css
@@ -1,8 +1,18 @@
-.cabecalho-perfil{
+.cabecalho-perfil {
   border-bottom: 0.5px solid black;
+  padding: 5px;
 }
-.barra-lateral-perfil{
+.barra-lateral-perfil {
   border-right: 50px solid #252526;
+}
+.botao-esquizofrenico {
+  background-color: rgb(0,0,0,0);
+  width: 75px;
+  color: white;
+  text-align: center;
+  line-height: 45px;
+  border-right: 1px solid white;
+  height: 100%;
 }
 
 .dados-perfil {
