--- a/src/app/perfil/perfil/perfil.component.html
+++ b/src/app/perfil/perfil/perfil.component.html
@@ -1,5 +1,9 @@
 <div class="perfil">
-  <header class="cabecalho-perfil"></header>
+  <header class="cabecalho-perfil">
+    <div class="botao-esquizofrenico">
+      <i>SETA</i>
+    </div>
+  </header>
   <aside class="barra-lateral-perfil">
   </aside>
   <section class="dados-perfil">
